--- a/Example/BetterKit/Base.lproj/Main.storyboard
+++ b/Example/BetterKit/Base.lproj/Main.storyboard
@@ -9,30 +9,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
-        <scene sceneID="EYS-n5-eKF">
-            <objects>
-                <viewController id="3yA-hI-ADd" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="poX-Xa-QkJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="r3X-Uz-LXp"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="5W2-ia-rRx">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="TrC-cU-4Nw"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3iG-DZ-biI" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="604" y="199"/>
-        </scene>
-        <!--Item-->
+        <!--Item 1-->
         <scene sceneID="Feu-fu-KAi">
             <objects>
                 <navigationController id="IHl-j3-auM" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="eeE-B4-y26"/>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="eeE-B4-y26"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DhU-oR-UIZ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -43,7 +24,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rl1-99-zc1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="316" y="-466"/>
+            <point key="canvasLocation" x="481" y="-466"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="3Vj-YH-dff">
@@ -75,7 +56,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1eL-Fb-wF2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1062" y="-466"/>
+            <point key="canvasLocation" x="1226" y="-466"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="rrc-Zm-zz2">
@@ -93,7 +74,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mMX-yP-aWP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1809" y="-466"/>
+            <point key="canvasLocation" x="1974" y="-466"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="94b-Hm-E32">
@@ -106,12 +87,58 @@
                     </tabBar>
                     <connections>
                         <segue destination="IHl-j3-auM" kind="relationship" relationship="viewControllers" id="w2H-a4-9eE"/>
-                        <segue destination="3yA-hI-ADd" kind="relationship" relationship="viewControllers" id="igN-mp-xEt"/>
+                        <segue destination="BrH-fF-crV" kind="relationship" relationship="viewControllers" id="sNl-kg-aDJ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rlY-3j-wyz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-350" y="-133"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="oJd-2l-uri">
+            <objects>
+                <tableViewController id="y0J-pC-t3h" customClass="TableViewController" customModule="BetterKit_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="YgW-z7-IiA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" id="0qR-Wl-u4B">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0qR-Wl-u4B" id="6eV-X1-uxu">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="y0J-pC-t3h" id="Z7G-Rv-v5G"/>
+                            <outlet property="delegate" destination="y0J-pC-t3h" id="fb1-3e-FG9"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="FXe-Iw-ciH"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HPm-ph-KNR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1226" y="233"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="Toi-fd-UE5">
+            <objects>
+                <navigationController id="BrH-fF-crV" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 2" id="SxE-zQ-evx"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VDb-9i-BdY">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="y0J-pC-t3h" kind="relationship" relationship="rootViewController" id="O3v-5O-q95"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wo7-df-nKZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="481" y="233"/>
         </scene>
     </scenes>
 </document>
